feat: 支持js版本
